# kvstorage

./: .gitignore  Cargo.toml  build.rs  config.toml  readme.md
proto/: request.proto
src/: main.rs  mod.rs
src/cache/: cache_manager.rs
src/common/: commands.rs
src/net/: mod.rs  pool.rs  requests.rs  server.rs
src/shard/: main.rs  mod.rs
src/shard/cache/: cache_manager.rs  mod.rs
src/shard/net/: mod.rs  requests.rs  server.rs
src/shard/storage/: mod.rs  storage_manager.rs
src/shard/tests/: test_cache_manager.rs  test_storage_manager.rs
src/shard/utils/: log.rs
src/shard_manager/: main.rs  mod.rs
src/shard_manager/net/: server.rs
src/shard_manager/tests/: mod.rs
src/shard_manager/utils/: command_processor.rs  distributor.rs  mod.rs
src/storage/: storage_manager.rs
src/tests/: mod.rs  test_cache_manager.rs
src/utils/: commands.rs  errors.rs  log.rs  mod.rs
