[package]
name = "kvstorage"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2

# [profile.dev]
# warning-level = 2
# rustc-flags = ["-D", "warnings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
memcache = "*"
config = "*"
chrono = "0.4.31"
