[package]
name = "kvstorage"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shard"
path = "src/shard/main.rs"

[[bin]]
name = "manager"
path = "src/shard_manager/main.rs"

[dependencies]
serde_json = "*"
memcache = "*"
config = "*"
serde = "*"
chrono = "0.4.31"
clap = { version = "*", features = ["derive"]}
tonic = "*"
prost = "*"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"

[build-dependencies]
tonic-build = "*"